--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -14,8 +14,7 @@ h1 {
 
 
 h2 {
-  font-size: 32px;
-  font-weight: bold;
+  font-size: 42px;
   color: white;
     font-weight: 300;
 }
@@ -23,12 +22,15 @@ h2 {
 h3 {
   font-size: 21px;
   color: gray;
-    font-weight: 300;
+  font-weight: 300;
 
 }
 
+p {
+    font-size: 16px;
+}
+
 a {
-  font-size: 16px;
   color: aquamarine;
   text-decoration: underline;
 }
